--- a/ParksService/ParksService/Views/Home/Index.cshtml
+++ b/ParksService/ParksService/Views/Home/Index.cshtml
@@ -2,72 +2,117 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="row">
-    <table id="parks-table" class="table table-bordered table-hover">
-        <thead>
-            <tr>
-                <td>Id</td>
-                <td>Name</td>
-                <td>State</td>
-                <td>Designation</td>
-                @* <td>Full Name</td> *@
-                @* <td>Description</td> *@
-                @* <td>WeatherInfo</td> *@
-                @* <td>Park Code</td> *@
-                @* <td>Directions</td> *@
-                @* <td>Directions URL</td> *@
-                <td>Coordinates</td>
-                <td>Url</td>
-            </tr>
-        </thead>
-    </table>
+<div class="container">
+    <button id="parks-button" class="btn btn-primary btn-sm">Refresh Parks List</button>
+    <br />
+    <br />
+    <div class="row">
+        <table id="parks-table" class="table table-hover table-bordered">
+            <thead>
+                <tr>
+                    <td>Name</td>
+                    <td>State</td>
+                    <td>Designation</td>
+                    <td>Map</td>
+                    <td>Website</td>
+                </tr>
+            </thead>
+        </table>
+    </div>
 </div>
 
-@section Scripts{
+@section scripts {
     <script>
-        $(document).ready(function () {
-            $('#parks-table').DataTable({
-                ajax: {
-                    type: "GET",
-                    url: 'https://developer.nps.gov/api/v1/parks',
+        $(document).ready(function() {
+            var refreshParks = function() {
+                $("#parks-button").text("Loading...");
+                $.ajax({
+                    url: "https://developer.nps.gov/api/v1/parks",
                     data: {
                         api_key: "5hCAzcru81QKEg1bDSyJz6KlMaFYTa3HTWmACBBs"
+                    },
+                    type: "GET",
+                    dataType: "JSON",
+                    success: function(data) {
+                        console.dir(data.data);
+                        var parks = JSON.stringify(data.data);
+                        $.ajax({
+                            type: "POST",
+                            url: "/Home/PopulateParks",
+                            data: parks,
+                            dataType: "json",
+                            contentType: "application/json; charset=utf-8",
+                            complete: function() {
+                                $("#parks-table").DataTable().ajax.reload();
+                                $("#parks-button").text("Refresh Parks List");
+                                $("#parks-button").blur();
+                            }
+                        });
                     }
+                });
+            };
+
+            $("#parks-button").click(function() {
+                refreshParks();
+            });
+
+            var getUrl = function(coords) {
+                var url = "http://maps.google.com/maps?q=";
+                return url + coords.replace(/[a-zA-Z]|:|\s/g, "");
+            };
+
+            var table = $("#parks-table").DataTable({
+                ajax: {
+                    url: "/Home/GetParks",
+                    method: "GET",
+                    dataType: "JSON"
                 },
                 processing: true,
                 language: {
                     processing: '<i class="fa fa-cog fa-spin fa-4x fa-fw"></i>'
                 },
-//                dom:
-//                    "tr" +
-//                        "<'row'<'col-sm-6 text-left'i><'col-sm-6 text-right'l>>" +
-//                        "<'row'<'col-sm-12'p>>",
                 rowId: "Id",
+                select: 'single',
                 columns: [
-                    { data: "id" },
-                    { data: "name" },
+//                    { data: "id" },
+                    { data: "fullName" },
                     { data: "states" },
                     { data: "designation" },
-//                    { data: "fullName" },
-//                    { data: "description" },
-//                    { data: "weatherInfo" },
-//                    { data: "parkCode" },
-//                    { data: "directions" },
-//                    { data: "directionsUrl" },
-                    { data: "latLong" },
-                @*    
-                     https://www.google.co.uk/maps/@52.8382005,-6.8102368,6z
-                    *@
-                {
-                        data: "url",
-                        "render": function(data, type, row, meta) {
-                            return '<a href="' + data + '">Visit</a>';
+                    {
+                        "data": "latLong",
+                        "render": function (data, type, row, meta) {
+                            data = `<a href="${getUrl(data)}" target="_blank" class="table-link">View</a>`;
+                            return data;
                         }
-        }
+                    },
+                    //{ data: "name" },
+                    //{ data: "description" },
+                    //{ data: "weatherInfo" },
+                    //{ data: "parkCode" },
+                    //{ data: "directions" },
+                    //{ data: "directionsUrl" },
+                    {
+                        "data": "url",
+                        "render": function(data, type, row, meta) {
+                            data = `<a href="${data}" target="_blank" class="table-link">Visit</a>`;
+                            return data;
+                        }
+                    }
                 ]
             });
+
+            $('#example tbody').on( 'click', 'tr', function () {
+                if ( $(this).hasClass('selected') ) {
+                    $(this).removeClass('selected');
+                }
+                else {
+                    table.$('tr.selected').removeClass('selected');
+                    $(this).addClass('selected');
+                }
+            } );
+
+
         });
+
     </script>
 }
-
-
