--- a/ParksService/ParksService/Views/Home/Index.cshtml
+++ b/ParksService/ParksService/Views/Home/Index.cshtml
@@ -1,118 +1,181 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿<head>
+    <link rel="stylesheet" href="~/css/indexParallax.css" />
+</head>
 
-<div class="container">
-    <button id="parks-button" class="btn btn-primary btn-sm">Refresh Parks List</button>
-    <br />
-    <br />
-    <div class="row">
-        <table id="parks-table" class="table table-hover table-bordered">
-            <thead>
-                <tr>
-                    <td>Name</td>
-                    <td>State</td>
-                    <td>Designation</td>
-                    <td>Map</td>
-                    <td>Website</td>
-                </tr>
-            </thead>
-        </table>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">National Park Service</a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Welcome <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="Explore">Explore</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="Directory">Directory</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
     </div>
+</nav>
+
+<div id="nps-parallax">
+
+    <section>
+        <div class="title">
+            <h1>"It was here that the romance of my life began."</h1>
+            <h3>- Theodore Roosevelt</h3>
+        </div>
+    </section>
+
+    <section>
+        <div class="parallax-one">
+            <h2>Arches National Park<br />(Utah)</h2>
+        </div>
+    </section>
+
+    <section>
+        <div class="block">
+            <p><span class="first-character sc">B</span>y the <a href="https://www.ourdocuments.gov/doc.php?flash=false&doc=45>">Act of March 1, 1872</a>, Congress established Yellowstone National Park in the Territories of Montana and Wyoming "as a public park or pleasuring-ground for the benefit and enjoyment of the people" and placed it "under exclusive control of the Secretary of the Interior." </p>
+
+            <p class="margin-top-10">The founding of Yellowstone National Park began a worldwide national park movement. </p>
+
+            <p>Today more than 100 nations contain some 1,200 national parks or equivalent preserves.</p>
+
+            <p>In the years following the establishment of Yellowstone, the United States authorized additional national parks and monuments, many of them carved from the federal lands of the West. These, also, were administered by the Department of the Interior, while other monuments and natural and historical areas were administered by the War Department and the Forest Service of the Department of Agriculture.</p>
+
+            <p class="margin-top-10">No single agency provided unified management of the varied federal parklands. </p>
+
+        </div>
+    </section>
+
+    <section>
+        <div class="parallax-two">
+            <h2>Yosemite National Park<br />(California)</h2>
+        </div>
+    </section>
+
+    <section>
+        <div class="block">
+            <p>
+                <span class="first-character ny">O</span>n August 25, 1916, President Woodrow Wilson signed the act creating the
+                National Park Service, a new federal bureau in the Department of the Interior responsible for protecting the 35
+                national parks and monuments then managed by the department and those yet to be established.
+            </p>
+
+            <p>
+                This <a href="https://www.nps.gov/parkhistory/online_books/anps/anps_1i.htm">"Organic Act"</a> states that
+                "the Service thus established shall promote and regulate the use of the Federal areas
+                known as national parks, monuments and reservations…by such means and measures as conform to the fundamental purpose
+                of the said parks, monuments and reservations, which purpose is to conserve the scenery and the natural and historic
+                objects and the wild life therein and to provide for the enjoyment of the same in such manner and by such means as will
+                leave them unimpaired for the enjoyment of future generations."
+            </p>
+
+            <p>
+                An <a href="https://www.nps.gov/parkhistory/online_books/anps/anps_3b.htm">Executive Order in 1933</a> transferred 56
+                national monuments and military sites from the Forest Service and the War Department to the National Park Service.
+                This action was a major step in the development of today's truly national system of parks—a system that includes
+                areas of historical as well as scenic and scientific importance.
+            </p>
+        </div>
+    </section>
+
+    <section>
+        <div class="parallax-three">
+            <h2>Vietnam Veterans Memorial And Washington Monument<br />(Washington, D.C.)</h2>
+        </div>
+    </section>
+
+    <section>
+        <div class="block">
+            <p>
+                <span class="first-character atw">C</span>ongress declared in the
+                <a href="https://www.nps.gov/parkhistory/online_books/anps/anps_7a.htm">General Authorities Act of 1970</a>
+                "that the National Park System, which began with the establishment of Yellowstone National Park in 1872,
+                has since grown to include superlative natural, historic, and recreation areas in every region…and that
+                it is the purpose of this Act to include all such areas in the System…."
+            </p>
+
+            <p class="margin-top-10">
+                The National Park System of the United States now comprises more than 400 areas
+                covering more than 84 million acres in 50 states, the District of Columbia,
+                American Samoa, Guam, Puerto Rico, Saipan, and the Virgin Islands.
+            </p>
+
+            <p>
+                These areas are of such national significance as to justify special
+                recognition and protection in accordance with various acts of Congress.
+            </p>
+        </div>
+    </section>
+    <section>
+        <div class="parallax-four">
+            <h2>Grand Canyon National Park<br />(Arizona)</h2>
+        </div>
+    </section>
+    <section>
+        <div class="block">
+            <p>
+                <span class="first-character sc">A</span>dditions to the National Park System are now
+                generally made through acts of Congress, and national parks can be created only through such acts.
+            </p>
+
+            <p class="margin-top-10">
+                But the President has authority, under the
+                <a href="https://www.nps.gov/subjects/legal/american-antiquities-act-of-1906.htm">Antiquities Act of 1906</a>,
+                to proclaim national monuments on lands already under federal jurisdiction.
+            </p>
+
+            <p>
+                The Secretary of the Interior is usually asked by Congress for recommendations on proposed
+                additions to the System. The Secretary is counseled by the National Park System Advisory Board,
+                composed of private citizens, which advises on possible additions to the System and policies for its management.
+        </div>
+    </section>
+    <section>
+        <div class="parallax-five">
+            <h2>Cape Cod National Seashore<br />(Massachusetts)</h2>
+        </div>
+    </section>
+    <section>
+        <div class="block">
+            <p>
+                <span class="first-character sc">T</span>he National Park Service still strives to meet its original goals,
+                while filling many other roles as well:
+            </p>
+            <ul>
+                <li>guardian of our diverse cultural and recreational resources</li>
+                <li>environmental advocate</li>
+                <li>partner in <a href="https://www.nps.gov/getinvolved/communities.htm">community revitalization</a></li>
+                <li>world leader in the parks and preservation community</li>
+                <li>pioneer in the drive to protect America's open space</li>
+            </ul>
+            <p class="margin-top-10">
+                Today more than 20,000 National Park Service employees care for America's 400+
+                national parks and work with communities across the nation to help preserve local history and create
+                close-to-home recreational opportunities.
+            </p>
+            <br />
+            <p style="font-size: small"><a href="https://www.nps.gov/articles/quick-nps-history.htm">Source</a></p>
+        </div>
+
+    </section>
+    <section>
+        <div class="parallax-six">
+            <h2>Dry Tortugas National Park<br />(Florida)</h2>
+        </div>
+    </section>
+
 </div>
-
-@section scripts {
-    <script>
-        $(document).ready(function() {
-            var refreshParks = function() {
-                $("#parks-button").text("Loading...");
-                $.ajax({
-                    url: "https://developer.nps.gov/api/v1/parks",
-                    data: {
-                        api_key: "5hCAzcru81QKEg1bDSyJz6KlMaFYTa3HTWmACBBs"
-                    },
-                    type: "GET",
-                    dataType: "JSON",
-                    success: function(data) {
-                        console.dir(data.data);
-                        var parks = JSON.stringify(data.data);
-                        $.ajax({
-                            type: "POST",
-                            url: "/Home/PopulateParks",
-                            data: parks,
-                            dataType: "json",
-                            contentType: "application/json; charset=utf-8",
-                            complete: function() {
-                                $("#parks-table").DataTable().ajax.reload();
-                                $("#parks-button").text("Refresh Parks List");
-                                $("#parks-button").blur();
-                            }
-                        });
-                    }
-                });
-            };
-
-            $("#parks-button").click(function() {
-                refreshParks();
-            });
-
-            var getUrl = function(coords) {
-                var url = "http://maps.google.com/maps?q=";
-                return url + coords.replace(/[a-zA-Z]|:|\s/g, "");
-            };
-
-            var table = $("#parks-table").DataTable({
-                ajax: {
-                    url: "/Home/GetParks",
-                    method: "GET",
-                    dataType: "JSON"
-                },
-                processing: true,
-                language: {
-                    processing: '<i class="fa fa-cog fa-spin fa-4x fa-fw"></i>'
-                },
-                rowId: "Id",
-                select: 'single',
-                columns: [
-//                    { data: "id" },
-                    { data: "fullName" },
-                    { data: "states" },
-                    { data: "designation" },
-                    {
-                        "data": "latLong",
-                        "render": function (data, type, row, meta) {
-                            data = `<a href="${getUrl(data)}" target="_blank" class="table-link">View</a>`;
-                            return data;
-                        }
-                    },
-                    //{ data: "name" },
-                    //{ data: "description" },
-                    //{ data: "weatherInfo" },
-                    //{ data: "parkCode" },
-                    //{ data: "directions" },
-                    //{ data: "directionsUrl" },
-                    {
-                        "data": "url",
-                        "render": function(data, type, row, meta) {
-                            data = `<a href="${data}" target="_blank" class="table-link">Visit</a>`;
-                            return data;
-                        }
-                    }
-                ]
-            });
-
-            $('#example tbody').on( 'click', 'tr', function () {
-                if ( $(this).hasClass('selected') ) {
-                    $(this).removeClass('selected');
-                }
-                else {
-                    table.$('tr.selected').removeClass('selected');
-                    $(this).addClass('selected');
-                }
-            } );
-
-
-        });
-
-    </script>
-}
