Added ViewModel for Park, fixed up About with a ton of CSS to make it look pretty. Added mapping configuration to go with the view model and included a dict for full state names

--- a/ParksService/ParksService/Views/Home/Explore.cshtml
+++ b/ParksService/ParksService/Views/Home/Explore.cshtml
@@ -1,5 +1,5 @@
-﻿@using ParksService.Models
-@model IEnumerable<Park>
+﻿@using ParksService.ViewModels
+@model IEnumerable<ParkViewModel>
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
@@ -33,4 +33,8 @@
 @foreach (var park in Model)
 {
     <p>@park.FullName</p>
+    <ul>
+        <li>@park.Id</li>
+        <li>@park.FullState</li>
+    </ul>
 }
