--- a/ParksService/ParksService/Views/Home/Index.cshtml
+++ b/ParksService/ParksService/Views/Home/Index.cshtml
@@ -47,15 +47,15 @@
 
     <section>
         <div class="block">
-            <p><span class="first-character sc">B</span>y the <a href="https://www.ourdocuments.gov/doc.php?flash=false&doc=45>">Act of March 1, 1872</a>, Congress established Yellowstone National Park in the Territories of Montana and Wyoming "as a public park or pleasuring-ground for the benefit and enjoyment of the people" and placed it "under exclusive control of the Secretary of the Interior." </p>
+            <p><span class="first-character ut">B</span>y the <a href="https://www.ourdocuments.gov/doc.php?flash=false&doc=45>">Act of March 1, 1872</a>, Congress established Yellowstone National Park in the Territories of Montana and Wyoming "as a public park or pleasuring-ground for the benefit and enjoyment of the people" and placed it "under exclusive control of the Secretary of the Interior." </p>
 
-            <p class="margin-top-10">The founding of Yellowstone National Park began a worldwide national park movement. </p>
+           <h4>The founding of Yellowstone National Park began a worldwide national park movement. </h4>
 
             <p>Today more than 100 nations contain some 1,200 national parks or equivalent preserves.</p>
 
             <p>In the years following the establishment of Yellowstone, the United States authorized additional national parks and monuments, many of them carved from the federal lands of the West. These, also, were administered by the Department of the Interior, while other monuments and natural and historical areas were administered by the War Department and the Forest Service of the Department of Agriculture.</p>
 
-            <p class="margin-top-10">No single agency provided unified management of the varied federal parklands. </p>
+            <h4 class="margin-top-10">No single agency provided unified management of the varied federal parklands. </h4>
 
         </div>
     </section>
@@ -69,7 +69,7 @@
     <section>
         <div class="block">
             <p>
-                <span class="first-character ny">O</span>n August 25, 1916, President Woodrow Wilson signed the act creating the
+                <span class="first-character ca">O</span>n August 25, 1916, President Woodrow Wilson signed the act creating the
                 National Park Service, a new federal bureau in the Department of the Interior responsible for protecting the 35
                 national parks and monuments then managed by the department and those yet to be established.
             </p>
@@ -101,18 +101,18 @@
     <section>
         <div class="block">
             <p>
-                <span class="first-character atw">C</span>ongress declared in the
+                <span class="first-character dc">C</span>ongress declared in the
                 <a href="https://www.nps.gov/parkhistory/online_books/anps/anps_7a.htm">General Authorities Act of 1970</a>
                 "that the National Park System, which began with the establishment of Yellowstone National Park in 1872,
                 has since grown to include superlative natural, historic, and recreation areas in every region…and that
                 it is the purpose of this Act to include all such areas in the System…."
             </p>
 
-            <p class="margin-top-10">
+            <h4 class="margin-top-10">
                 The National Park System of the United States now comprises more than 400 areas
                 covering more than 84 million acres in 50 states, the District of Columbia,
                 American Samoa, Guam, Puerto Rico, Saipan, and the Virgin Islands.
-            </p>
+            </h4>
 
             <p>
                 These areas are of such national significance as to justify special
@@ -128,7 +128,7 @@
     <section>
         <div class="block">
             <p>
-                <span class="first-character sc">A</span>dditions to the National Park System are now
+                <span class="first-character az">A</span>dditions to the National Park System are now
                 generally made through acts of Congress, and national parks can be created only through such acts.
             </p>
 
@@ -152,7 +152,7 @@
     <section>
         <div class="block">
             <p>
-                <span class="first-character sc">T</span>he National Park Service still strives to meet its original goals,
+                <span class="first-character ma">T</span>he National Park Service still strives to meet its original goals,
                 while filling many other roles as well:
             </p>
             <ul>
@@ -162,11 +162,11 @@
                 <li>world leader in the parks and preservation community</li>
                 <li>pioneer in the drive to protect America's open space</li>
             </ul>
-            <p class="margin-top-10">
+            <h4 class="margin-top-10">
                 Today more than 20,000 National Park Service employees care for America's 400+
                 national parks and work with communities across the nation to help preserve local history and create
                 close-to-home recreational opportunities.
-            </p>
+            </h4>
             <br />
             <p style="font-size: small"><a href="https://www.nps.gov/articles/quick-nps-history.htm">Source</a></p>
         </div>
