--- a/ParksService/ParksService/Views/Home/_ViewDetailsModal.cshtml
+++ b/ParksService/ParksService/Views/Home/_ViewDetailsModal.cshtml
@@ -1,9 +1,51 @@
-﻿@model ParksService.Models.Park
+﻿@using ParksService.ViewModels
+@model ParkViewModel
 
-<div>
-    <h4>Details</h4>
-</div>
+<head>
+    <link href="https://fonts.googleapis.com/css?family=Bitter:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="~/css/site.css" />
 
-<hr />
+</head>
+<body>
+<form id="details-form">
+    <div id="view-details">
+        <div id="details-header">
+            <div id="details-title">
+                <h3>@Model.FullName</h3>
+            </div>
+            <h5>@Model.FullState</h5>
+        </div>
+        <br />
+        <button type="button" class="collapsible">Background</button>
+        <div id="description-collapse" class="content">
+            <p>@Model.Description</p>
+        </div>
+        <hr />
+        <button type="button" class="collapsible">Getting There</button>
+        <div id="directions-collapse" class="content">
+            <p>@Model.DirectionsInfo</p>
+        </div>
+        <hr />
+        <button type="button" class="collapsible">Weather</button>
+        <div id="weather-collapse" class="content">
+            <p>@Model.WeatherInfo</p>
+        </div>
+    </div>
+</form>
+</body>
+    <script type="text/javascript">
+        var coll = document.getElementsByClassName("collapsible");
 
-<p>@Model.Description</p>
+        for (var i = 0; i < coll.length; i++) {
+            coll[i].addEventListener("click",
+                function () {
+                    this.classList.toggle("active");
+                    var content = this.nextElementSibling;
+                    if (content.style.maxHeight) {
+                        content.style.maxHeight = null;
+                    } else {
+                        content.style.maxHeight = content.scrollHeight + "px";
+                    }
+                });
+        }
+    </script>
