--- a/ParksService/ParksService/Views/Home/Directory.cshtml
+++ b/ParksService/ParksService/Views/Home/Directory.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using Newtonsoft.Json
+@* @model IEnumerable<ParksService.ViewModels.ParkViewModel> *@
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -23,95 +25,5 @@
 </div>
 
 @section scripts {
-    <script>
-        $(document).ready(function () {
-            var refreshParks = function() {
-                $("#parks-button").text("Loading...");
-                $.ajax({
-                    url: "https://developer.nps.gov/api/v1/parks",
-                    data: {
-                        api_key: "5hCAzcru81QKEg1bDSyJz6KlMaFYTa3HTWmACBBs"
-                    },
-                    type: "GET",
-                    dataType: "JSON",
-                    success: function(data) {
-                        var parks = JSON.stringify(data.data);
-                        $.ajax({
-                            type: "POST",
-                            url: "/Home/PopulateParks",
-                            data: parks,
-                            dataType: "json",
-                            contentType: "application/json; charset=utf-8",
-                            complete: function() {
-                                $("#parks-table").DataTable().ajax.reload();
-                                $("#parks-button").text("Refresh Parks List");
-                                $("#parks-button").blur();
-                            }
-                        });
-                    }
-                });
-            };
-
-            $("#parks-button").click(function() {
-                refreshParks();
-            });
-
-            var getUrl = function(coords) {
-                var url = "http://maps.google.com/maps?q=";
-                return url + coords.replace(/[a-zA-Z]|:|\s/g, "");
-            };
-
-            $("#parks-table").DataTable({
-                ajax: {
-                    url: "/Home/GetParks",
-                    method: "GET",
-                    dataType: "JSON"
-                },
-                processing: true,
-                language: {
-                    processing: '<i class="fa fa-cog fa-spin fa-4x fa-fw"></i>'
-                },
-                rowId: "Id",
-                select: 'single',
-                columns: [
-                    { data: "fullName" },
-                    { data: "states" },
-                    { data: "designation" },
-                    {
-                        "data": "latLong",
-                        "render": function (data, type, row, meta) {
-                            data = `<a href="${getUrl(data)}" target="_blank" class="table-link">View</a>`;
-                            return data;
-                        }
-                    },
-                    //{ data: "name" },
-                    //{ data: "description" },
-                    //{ data: "weatherInfo" },
-                    //{ data: "parkCode" },
-                    //{ data: "directions" },
-                    //{ data: "directionsUrl" },
-                    {
-                        "data": "url",
-                        "render": function(data, type, row, meta) {
-                            data = `<a href="${data}" target="_blank" class="table-link">Visit</a>`;
-                            return data;
-                        }
-                    },
-                    {
-                        data: "id",
-                        "render": function (data, type, row, meta) {
-//                            data =
-//                                `<a asp-area="" 
-//                                    asp-controller="Home" 
-//                                    asp-action="Index"
-//                                    asp-route-id="${data}"target="_blank" class="table-link">Details</a>`;
-                            data = `<a href="/Home/ViewDetails?id=${data}" target="_blank" class="table-link">Visit</a>`;
-                            return data;
-                        }
-                    }
-                ]
-            });
-        });
-
-    </script>
+    <script type="text/javascript" src="~/Scripts/DirectoryScripts.js"></script>
 }
