--- a/ParksService/ParksService/wwwroot/css/aboutPageStyle.css
+++ b/ParksService/ParksService/wwwroot/css/aboutPageStyle.css
@@ -1,4 +1,127 @@
 ﻿body {
     background-image: url(https://img.huffingtonpost.com/asset/5a60f9351f00003c00db9681.jpeg?cache=n6hjxccivo&ops=1910_1000);
+    background-size: cover;
 }
 
+#about-panel p {
+    margin-left: 25px;
+    margin-right: 20px;
+    font-family: 'Bitter', serif, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 18px;
+}
+
+#about-panel h1 {
+    margin-left: 45px;
+    font-family: 'Bitter', serif, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+#about-panel h4 {
+    margin-right: 25px;
+    text-align: right;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    color: #94e8e8;
+    font-size: 20px;
+}
+
+#about-panel hr {
+    border-color: khaki;
+    margin-left: 4px;
+}
+
+#frosted-pane {
+    background-color: #242424;
+    float: left;
+    width: 100%;
+    height: 615px;
+    margin: 5px;
+    opacity: .85;
+    z-index: 0;
+}
+
+.inner {
+    position: absolute;
+    color: khaki;
+    background-color: #262625;
+    height: 575px;
+    width: 69%;
+    opacity: .8 !important;
+    margin-top: 20px;
+    margin-left: 118px;
+    border-radius: 20px;
+    box-shadow: 3px 4px 10px #202020;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height .4s;
+}
+
+.expand {
+    max-height: 575px;
+}
+
+.labels {
+    height: 596px;
+    width: 140px;
+    float: left;
+    z-index: 1;
+    position: absolute;
+    margin-left: -80px;
+    margin-top: 15px;
+}
+
+#about-intro {
+    z-index: 1;
+}
+
+#about-mission {
+    z-index: 2;
+}
+
+#about-emblem {
+    z-index: 4;
+}
+
+#arrowhead {
+    float: left;
+    margin-right: 38px;
+    margin-left: 16px;
+}
+
+/* Bootstrap Override */
+.btn-info,
+.btn-info:visited {
+    background-color: darkkhaki;
+    color: #213838;
+    border-color: #213838;
+    outline-color: darkkhaki;
+    font-family: 'Bitter', serif, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    white-space: normal;
+    font-weight: 700;
+}
+
+    .btn-info:hover {
+        color: darkkhaki;
+        background-color: #213838;
+        border-color: #213838;
+        outline-color: #213838 !important;
+    }
+
+    .btn-info:active, .btn-info.active, .open > .dropdown-toggle.btn-info {
+        color: darkkhaki;
+        background-color: #213838;
+        border-color: #213838;
+        outline-color: #213838 !important;
+    }
+
+    .btn-info:focus {
+        color: darkkhaki !important;
+        background-color: #041908 !important;
+        border-color: #041908 !important;
+        outline-color: #041908 !important;
+    }
+
+.btn:focus, .btn:active:focus {
+    outline-color: #213838 !important;
+}
