--- a/ParksService/ParksService/Views/Home/Index.cshtml
+++ b/ParksService/ParksService/Views/Home/Index.cshtml
@@ -2,6 +2,11 @@
     <link rel="stylesheet" href="~/css/indexParallax.css" />
 </head>
 
+@{
+    ViewData["Title"] = "Home Page";
+}
+
+
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
@@ -49,7 +54,7 @@
         <div class="block">
             <p><span class="first-character ut">B</span>y the <a href="https://www.ourdocuments.gov/doc.php?flash=false&doc=45>">Act of March 1, 1872</a>, Congress established Yellowstone National Park in the Territories of Montana and Wyoming "as a public park or pleasuring-ground for the benefit and enjoyment of the people" and placed it "under exclusive control of the Secretary of the Interior." </p>
 
-           <h4>The founding of Yellowstone National Park began a worldwide national park movement. </h4>
+            <h4>The founding of Yellowstone National Park began a worldwide national park movement. </h4>
 
             <p>Today more than 100 nations contain some 1,200 national parks or equivalent preserves.</p>
 
