--- a/ParksService/ParksService/Views/Home/Directory.cshtml
+++ b/ParksService/ParksService/Views/Home/Directory.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Newtonsoft.Json
 @* @model IEnumerable<ParksService.ViewModels.ParkViewModel> *@
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Park Directory";
 }
 
 <div class="container">
