--- a/ParksService/ParksService/wwwroot/css/aboutPageStyle.css
+++ b/ParksService/ParksService/wwwroot/css/aboutPageStyle.css
@@ -1,6 +1,7 @@
 ﻿body {
     background-image: url(https://img.huffingtonpost.com/asset/5a60f9351f00003c00db9681.jpeg?cache=n6hjxccivo&ops=1910_1000);
     background-size: cover;
+    background-color: #242424;
 }
 
 #about-panel p {
@@ -37,28 +38,27 @@
     width: 100%;
     height: 615px;
     margin: 5px;
-    opacity: .85;
+    opacity: .97;
+    border-radius: 5px;
     z-index: 0;
 }
+ 
+ .inner { 
+     position: absolute; 
+     color: khaki; 
+     background-color: #262625; 
+     height: 575px; 
+     width: 79%; 
+     opacity: .8 !important; 
+     margin-top: 20px; 
+     margin-left: 62px; 
+     border-radius: 20px; 
+     box-shadow: 3px 4px 10px #202020; 
+     display: none;
+ }
 
-.inner {
-    position: absolute;
-    color: khaki;
-    background-color: #262625;
-    height: 575px;
-    width: 69%;
-    opacity: .8 !important;
-    margin-top: 20px;
-    margin-left: 118px;
-    border-radius: 20px;
-    box-shadow: 3px 4px 10px #202020;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height .4s;
-}
-
-.expand {
-    max-height: 575px;
+.landing-page {
+    display: initial;
 }
 
 .labels {
@@ -76,11 +76,11 @@
 }
 
 #about-mission {
-    z-index: 2;
+    z-index: 1;
 }
 
 #about-emblem {
-    z-index: 4;
+    z-index: 1;
 }
 
 #arrowhead {
@@ -99,6 +99,7 @@
     font-family: 'Bitter', serif, "Helvetica Neue", Helvetica, Arial, sans-serif;
     white-space: normal;
     font-weight: 700;
+    transition: .25s;
 }
 
     .btn-info:hover {
@@ -124,4 +125,17 @@
 
 .btn:focus, .btn:active:focus {
     outline-color: #213838 !important;
+}
+
+.landing-page p {
+    font-size: 14px !important;
+    text-align: right;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    letter-spacing: 2px;
+    color: antiquewhite;
+}
+
+.landing-page a {
+    color: #79bbf5;
 }
