--- a/ParksService/ParksService/wwwroot/css/indexParallax.css
+++ b/ParksService/ParksService/wwwroot/css/indexParallax.css
@@ -142,6 +142,12 @@ body {
     padding: 60px;
     margin: 0 auto;
     text-align: center;
+    border-top-style: inset;
+    border-top-color: #bdb76b;
+    border-bottom-style: outset;
+    border-bottom-color: #bdb76b;
+    border-left-style: double;
+    border-right-style: double;
 }
 
     #nps-parallax .title h1 {
@@ -162,6 +168,12 @@ body {
     width: 100% !important;
     margin: 0 auto;
     text-align: justify;
+    border-top-style: inset;
+    border-top-color: #fdf9d0;
+    border-bottom-style: outset;
+    border-bottom-color: #fdf9d0;
+    border-left-style: double;
+    border-right-style: double;
 }
 
 @media screen and (max-width: 959px) and (min-width: 768px) {
@@ -203,6 +215,8 @@ body {
     -webkit-background-size: cover;
     background-repeat: no-repeat;
     background-position: top center;
+    border-left-style: double;
+    border-right-style: double;
 }
 
 #nps-parallax .parallax-two {
@@ -218,6 +232,8 @@ body {
     -webkit-background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+    border-left-style: double;
+    border-right-style: double;
 }
 
 #nps-parallax .parallax-three {
@@ -233,6 +249,8 @@ body {
     -webkit-background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+    border-left-style: double;
+    border-right-style: double;
 }
 
 #nps-parallax .parallax-four {
@@ -248,6 +266,8 @@ body {
     -webkit-background-size: cover;
     background-repeat: no-repeat;
     background-position: top center;
+    border-left-style: double;
+    border-right-style: double;
 }
 
 #nps-parallax .parallax-five {
@@ -263,6 +283,8 @@ body {
     -webkit-background-size: cover;
     background-repeat: no-repeat;
     background-position: top center;
+    border-left-style: double;
+    border-right-style: double;
 }
 
 #nps-parallax .parallax-six {
@@ -278,6 +300,10 @@ body {
     -webkit-background-size: cover;
     background-repeat: no-repeat;
     background-position: top center;
+    border-left-style: double;
+    border-right-style: double;
+    border-bottom-style: outset;
+    border-bottom-color: #fdf9d0;
 }
 
 
