Added content to the Explore page. This includes an ajax call to the controller to retrieve parks by state. Also cleaned up some algorithms, made aesthetic changes, and added functionality to ParkService.

--- a/ParksService/ParksService/Views/Home/About.cshtml
+++ b/ParksService/ParksService/Views/Home/About.cshtml
@@ -145,10 +145,10 @@
                     let div = $(`div[data-toggle-id=${attr}]`);
                     if (div.length) {
                         let items = $("div.inner").not(`#${div[0].id}`);
-                        items.hide(100);
+                        items.slideUp(150);
                     }
 
-                    div.is(":visible") ? div.hide(100) : div.show(150);
+                    div.is(":visible") ? div.slideUp(150) : div.slideDown(250);
                 });
         };
     </script>
