--- a/ParksService/ParksService/Views/Shared/_Layout.cshtml
+++ b/ParksService/ParksService/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                             <li><a asp-area="" asp-controller="Home" asp-action="Explore">Explore</a></li>
                             <li><a asp-area="" asp-controller="Home" asp-action="Directory">Directory</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
+                            <li><a href="#">NPS 2018</a></li>
                         </ul>
                     </li>
                 </ul>
