--- a/ParksService/ParksService/Views/Home/Explore.cshtml
+++ b/ParksService/ParksService/Views/Home/Explore.cshtml
@@ -35,7 +35,7 @@
                         <li><a asp-area="" asp-controller="Home" asp-action="Explore">Explore</a></li>
                         <li><a asp-area="" asp-controller="Home" asp-action="Directory">Directory</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
+                        <li><a href="#">NPS 2018</a></li>
                     </ul>
                 </li>
             </ul>
@@ -47,29 +47,17 @@
     <div class="explore">
         <div class="form-group">
             <label class="header-label">Search Parks by State</label>
-            <input name="state" class="form-control states-box" list="states-list" />
+            <input name="state" class="form-control states-box" list="states-list"/>
             <datalist id="states-list">
                 @* Options populated from JS *@
             </datalist>
             <button class="btn btn-primary btn-lg search-button">Search</button>
         </div>
-        
+        <hr />
+                @* Results populated from JS *@
         <div class="search-results form-control">
 
         </div>
-        
-        
-
-        <hr />
-
-        @foreach (var park in Model)
-        {
-            <p>@park.FullName</p>
-            <ul>
-                <li>@park.Id</li>
-                <li>@park.FullState</li>
-            </ul>
-        }
     </div>
 </body>
 
