--- a/ParksService/ParksService/wwwroot/css/aboutPageStyle.css
+++ b/ParksService/ParksService/wwwroot/css/aboutPageStyle.css
@@ -1,5 +1,6 @@
 ﻿body {
-    background-image: url(https://img.huffingtonpost.com/asset/5a60f9351f00003c00db9681.jpeg?cache=n6hjxccivo&ops=1910_1000);
+    /* background-image: url(https://img.huffingtonpost.com/asset/5a60f9351f00003c00db9681.jpeg?cache=n6hjxccivo&ops=1910_1000); */
+    background-image: url("../images/arrowheadwall.jpg");
     background-size: cover;
     background-color: #242424;
 }
